[package]
name = "asciicker-rs"
version = "0.0.4"
authors = ["Niki4tap <rombiklol2@gmail.com>"]
edition = "2021"
description = """
Rust library for interacting with asciicker servers.
"""
repository = "https://github.com/Niki4tap/asciicker-rs"
license = "MIT OR Apache-2.0"
keywords = ["asciicker"]
categories = ["asynchronous", "network-programming", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_rules_attribute = "0.0.2"
tokio-tungstenite = "0.16.1"
tokio = {version = "1.15.0", features = ["rt", "macros", "sync", "time", "rt-multi-thread"]}
futures-util = "0.3.19"
concat-idents = "1.1.3"
crossbeam = "0.8.1"

[features]
default = ["all"]
packets = []
bot = ["packets"]
all = ["packets", "bot"]
